--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.completed {
+    text-decoration: line-through;
+}
+
+.task {
+    border-bottom: 2px solid #D1D3D4;
+}
